--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -6,7 +6,7 @@ doctrine:
         # either here or in the DATABASE_URL env var (see .env file)
         server_version: '13.0'
         types:
-            datetime_immutable: App\Helpers\CarbonMicrosecondsType
+            datetime_microseconds: App\Helpers\CarbonMicrosecondsType
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
