--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,14 @@
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
         "sensio/framework-extra-bundle": "^6.0",
+        "spomky-labs/web-push-bundle": "^3.1",
         "stof/doctrine-extensions-bundle": "^1.12",
         "symfony-bundles/json-request-bundle": "^4.1",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/expression-language": "6.4.*",
+        "symfony/finder": "6.4.*",
         "symfony/flex": "^2.0.0",
         "symfony/framework-bundle": "6.4.*",
         "symfony/http-client": "6.4.*",
