added pwa bundle, not working fully yet

--- a/.env
+++ b/.env
@@ -44,3 +44,6 @@ GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
 ###< google/apiclient ###
 
 STORAGE_DIR=''
+APP_ROOT_URI='https://localhost:8000'
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
