--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,13 @@
         "insitaction/easyadmin-fields-bundle": "^5.1",
         "knplabs/knp-markdown-bundle": "1.10.0",
         "knplabs/knp-time-bundle": "^1.11",
+        "lcobucci/jwt": "^5.4",
         "nelmio/cors-bundle": "^2.5",
         "nesbot/carbon": "^3.8",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
         "sensio/framework-extra-bundle": "^6.0",
+        "spomky-labs/pwa-bundle": "^1.2",
         "spomky-labs/web-push-bundle": "^3.1",
         "stof/doctrine-extensions-bundle": "^1.12",
         "symfony-bundles/json-request-bundle": "^4.1",
@@ -55,9 +57,11 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dbrekelmans/bdi": "^1.3",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.15",
+        "symfony/panther": "^2.1",
         "symfony/var-dumper": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*",
         "zenstruck/foundry": "^1.1"
@@ -96,7 +100,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "importmap:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
