--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,6 @@
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
         "sensio/framework-extra-bundle": "^6.0",
-        "spomky-labs/pwa-bundle": "^1.2",
         "spomky-labs/web-push-bundle": "^3.1",
         "stof/doctrine-extensions-bundle": "^1.12",
         "symfony-bundles/json-request-bundle": "^4.1",
@@ -100,8 +99,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "importmap:install": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
