--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "@mui/system": "^6.1.7",
         "@mui/x-tree-view": "^7.22.1",
         "@mui/x-tree-view-pro": "^7.22.1",
-        "brace": "^0.11.1"
+        "brace": "^0.11.1",
+        "chartjs-plugin-zoom": "^2.2.0",
+        "pwa-bundle": "spomky-labs/pwa-bundle"
     }
 }
