--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^18.0",
         "regenerator-runtime": "^0.13.2",
         "snarkdown": "^2.0.0",
+        "sweetalert2": "^11.14.5",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
